Changed HTML, JS, and CSS. Pictures will disappear but will not return
Co-authored-by: Jillian Gibson <jillian.l.gibson@gmail.com>

--- a/walrus.html
+++ b/walrus.html
@@ -12,36 +12,37 @@
     <h1>Peek-a-boo</h1>
     <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
-   
-      <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
-    </div>
+      <div>
+        <div>
+          <div id="walrus-showing">
+          <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
+        </div>
+        
+        <div>
+          <div id="walrus-hidden">
+            <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
+            <img src="img/walrus.jpg">
+        </div> 
+      </div>
+      
+      <div>
+        <div id="pig-fade-in">
+          <p><span class="clickable1">Click here</span> to see Mr. Pig!</p>
+        </div>
+        <div id="pig-fade-out">
+          <p>Look at that giant pig!<span class="clickable1"> Click here</span> to hide Mr. Pig!</p>
+          <img src="http://lorempixel.com/output/animals-q-c-300-300-6.jpg">
+      </div>
 
-    <div id="walrus-showing">
-      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
-      <img src="img/walrus.jpg">
-    </div> 
-
-    </div id="pig-fade-in">
-      <p><span class="clickable">Click here</span> to show an Pig!</p>
-      <img src="http://lorempixel.com/output/animals-q-c-300-300-6.jpg">
-    </div>
-
-    </div id="pig-fade-out">
-      <p><span class="clickable">Click here</span> to hide a pig!</p>
-    </div>
+      <div>
+        <div id="rhino-slideUp">
+          <p><span class="clickable2">Click here</span> to see the baby Rhino!</p>
+        </div>
+        <div id="rhino-slideDown">
+          <p>What an adorable baby Rhino! <span class="clickable2">Click here</span> to hide her again.</p>
+          <img src="http://lorempixel.com/output/animals-q-c-400-400-1.jpg">
+        </div> 
+      </div>
   </div>
-
-
-<p><span class="clickable">Click here</span> to see a baby Rhino!</p>
-</div>
-
-  <div id="rhino-slideDown">
-    <p>What an adorable baby Rhino! <span id="clickable">Click here</span> to hide her again.</p>
-    <img src="http://lorempixel.com/output/animals-q-c-400-400-1.jpg">
-  </div> 
-
-
-</div>
-
 </body>
 </html>
